testsuite/tests/parser/should_fail/T12446.hs
module T12446 where

x = undefined @(_ ~ _)
