testsuite/tests/parser/should_fail/T12446.stderr

T12446.hs:4:5: error:
    Illegal visible type application ‘@(_ ~ _)’
      Perhaps you intended to use TypeApplications
